--- a/angular-src/src/app/components/clientes/clientes.component.html
+++ b/angular-src/src/app/components/clientes/clientes.component.html
@@ -40,7 +40,7 @@
           <div class="input-group">
             <label for="">Categoria</label>
             <select class="form-control input-sm" [(ngModel)]="categoria" name="categoria" id="categoria">
-              <option value="" disabled=true>Selecione uma ou mais opções:</option>
+              <option value="" disabled=true>Selecione uma opção:</option>
               <option value="Revenda">Revenda</option>
               <option value="Varejo">Varejo</option>
               <option value="Engenharia">Engenharia</option>
